--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-name = AuditLogTool
+name = VulnStatusManageTool
 
 appender.console.type = Console
 appender.console.name = CONSOLE
@@ -7,7 +7,7 @@ appender.console.layout.pattern = [%d{yyyy-MM-dd HH:mm:ss}][%-5p] %m%n
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName = auditlogtool.log
+appender.file.fileName = vulnstatusmanagetool.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = [%d{yyyy-MM-dd HH:mm:ss}][%-5p] %m%n
 
